tests/spec/emit/snapshots/enum_user_pascal_string_method_suppresses_auto_stringer.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum Color {
    Red,
    Blue,
  }
  
  impl Color {
    fn String(self) -> string {
      "custom"
    }
  }
  
  fn main() {
    let c = Color.Red
    let _ = c
  }
---
package main

func MakeColorRed() Color {
	return Color{Tag: ColorRed}
}

func MakeColorBlue() Color {
	return Color{Tag: ColorBlue}
}

type ColorTag uint8

const (
	ColorRed ColorTag = iota
	ColorBlue
)

type Color struct {
	Tag ColorTag
}

func (c Color) String() string {
	return "custom"
}

func main() {
	c := MakeColorRed()
	_ = c
}
