tests/spec/emit/snapshots/enum_user_string_and_go_string_methods.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum Color {
    Red,
    Blue,
  }
  
  impl Color {
    pub fn string(self) -> string {
      "custom display"
    }
  
    pub fn goString(self) -> string {
      "custom debug"
    }
  }
  
  fn main() {
    let c = Color.Red
    let _ = c
  }
---
package main

func MakeColorRed() Color {
	return Color{Tag: ColorRed}
}

func MakeColorBlue() Color {
	return Color{Tag: ColorBlue}
}

type ColorTag uint8

const (
	ColorRed ColorTag = iota
	ColorBlue
)

type Color struct {
	Tag ColorTag
}

func (c Color) String() string {
	return "custom display"
}

func (c Color) GoString() string {
	return "custom debug"
}

func main() {
	c := MakeColorRed()
	_ = c
}
