tests/spec/emit/snapshots/enum_user_string_method_emits_go_string.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum Color {
    Red,
    Blue,
  }
  
  impl Color {
    pub fn string(self) -> string {
      "custom"
    }
  }
  
  fn main() {
    let c = Color.Red
    let _ = c
  }
---
package main

func MakeColorRed() Color {
	return Color{Tag: ColorRed}
}

func MakeColorBlue() Color {
	return Color{Tag: ColorBlue}
}

type ColorTag uint8

const (
	ColorRed ColorTag = iota
	ColorBlue
)

type Color struct {
	Tag ColorTag
}

func (c Color) String() string {
	return "custom"
}

func main() {
	c := MakeColorRed()
	_ = c
}
