tests/spec/emit/snapshots/enum_variant_construction_simple.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum Color { Red, Green, Blue }
  
  fn test() -> Color {
    Color.Red
  }
---
package main

func MakeColorRed() Color {
	return Color{Tag: ColorRed}
}

func MakeColorGreen() Color {
	return Color{Tag: ColorGreen}
}

func MakeColorBlue() Color {
	return Color{Tag: ColorBlue}
}

type ColorTag uint8

const (
	ColorRed ColorTag = iota
	ColorGreen
	ColorBlue
)

type Color struct {
	Tag ColorTag
}

func test() Color {
	return MakeColorRed()
}
