tests/spec/emit/snapshots/enum_variant_construction_with_data.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn test() -> Option<int> {
    Some(42)
  }
---
package main

func test() (int, bool) {
	return 42, true
}
