tests/spec/emit/snapshots/enum_variant_spread_all_fields_assigned_discards_base_call.snap
---
source: tests/spec/emit/types.rs
description: |
  
  import "go:fmt"
  
  enum Cursor {
    Point { id: int, x: int },
    Area { id: int, w: int },
  }
  
  fn make_base() -> Cursor { fmt.Println("base"); Cursor.Point { id: 1, x: 2 } }
  
  fn test() -> Cursor {
    Cursor.Area { id: 4, w: 3, ..make_base() }
  }
---
package main

import "fmt"

func MakeCursorPoint(arg0 int, arg1 int) Cursor {
	return Cursor{Tag: CursorPoint, Id: arg0, X: arg1}
}

func MakeCursorArea(arg0 int, arg1 int) Cursor {
	return Cursor{Tag: CursorArea, Id: arg0, W: arg1}
}

type CursorTag uint8

const (
	CursorPoint CursorTag = iota
	CursorArea
)

type Cursor struct {
	Tag CursorTag
	Id  int
	X   int
	W   int
}

func makeBase() Cursor {
	fmt.Println("base")
	return Cursor{
		Tag: CursorPoint,
		Id:  1,
		X:   2,
	}
}

func test() Cursor {
	_ = makeBase()
	return Cursor{
		Tag: CursorArea,
		Id:  4,
		W:   3,
	}
}
