tests/spec/emit/snapshots/enum_variant_with_multiple_fields_pattern.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  enum Pair<A, B> { Both(A, B), Neither }
  
  fn test(p: Pair<int, string>) -> int {
    match p {
      Both(n, s) => n,
      Neither => 0,
    }
  }
---
package main

func MakePairBoth[A any, B any](arg0 A, arg1 B) Pair[A, B] {
	return Pair[A, B]{Tag: PairBoth, Both0: arg0, Both1: arg1}
}

func MakePairNeither[A any, B any]() Pair[A, B] {
	return Pair[A, B]{Tag: PairNeither}
}

type PairTag uint8

const (
	PairBoth PairTag = iota
	PairNeither
)

type Pair[A any, B any] struct {
	Tag   PairTag
	Both0 A
	Both1 B
}

func test(p Pair[int, string]) int {
	if p.Tag == PairBoth {
		return p.Both0
	}
	return 0
}
