tests/spec/emit/snapshots/enumerated_slice_filter.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Slice<int>) -> Slice<(int, int)> {
    s.enumerate().filter(|(i, _)| i % 2 == 0)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(s []int) []lisette.Tuple2[int, int] {
	return lisette.EnumeratedSliceFilter(s, func(arg lisette.Tuple2[int, int]) bool {
		i := arg.First
		return i%2 == 0
	})
}
